--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <div style="margin-left: 500px;">
 
                 <label for="name" class="cls">Name:</label><br>
-                <input type="text" name="username" placeholder="Enter Name" class="in" />
+                <input type="text" name="username" id="naam" placeholder="Enter Name" class="in" />
 
                 <br>
                 <br>
                 <label for="email" class="cls">Email:</label><br>
-                <input type="email" name="mail" placeholder="Enter Mail Id " class="in">
+                <input type="email" name="mail" id="email" placeholder="Enter Mail Id " class="in">
 
                 <br><br>
                 <label for="Phone" class="cls">Phone:</label><br>
-                <input type="number" name="phone" placeholder="Enter Phone Number" class="in">
+                <input type="number" name="phone" id="cell" placeholder="Enter Phone Number" class="in">
 
                 <br><br>
                 <button class="btn">GET A CALL</button>
             </div>
         </form>
-        
+
         <br><br>
         <h3>Booked Customer</h3>
         <ul id="browData"></ul>
